# amplifier-app-cli

./: README.md  pyproject.toml
amplifier_app_cli/: main.py
amplifier_app_cli/runtime/: config.py
