[project]
name = "amplifier-app-cli"
version = "0.1.0"
description = "Reference CLI implementation for Amplifier AI development platform"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Microsoft MADE:Explorations Team" }]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pygments>=2.15.0",  # Needed for pygments.lexers.markup
    "pydantic>=2.0.0",
    "amplifier-core",
    "amplifier-collections",
    "amplifier-foundation",
    "amplifier-profiles",
    "pyyaml>=6.0.3",
    "prompt-toolkit>=3.0.52",
    "httpx[socks]>=0.28.1",
]

[project.scripts]
amplifier = "amplifier_app_cli.main:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_app_cli"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-asyncio>=0.24.0"]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-collections = { git = "https://github.com/microsoft/amplifier-collections", branch = "main" }
amplifier-foundation = { git = "https://github.com/microsoft/amplifier-foundation", branch = "main" }
amplifier-profiles = { git = "https://github.com/microsoft/amplifier-profiles", branch = "main" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

